# ntp-sit-2025

./: README.md  package-lock.json
hangman-core/: Cargo.toml
hangman-core/src/: lib.rs
hangman-plus/: package-lock.json  package.json
hangman-plus/src/: App.tsx
hangman-plus/src-tauri/: Cargo.toml  tauri.conf.json
hangman-plus/src-tauri/src/: main.rs
hangman-plus/src-tauri/src/commands/: auth_commands.rs  card_commands.rs  game_commands.rs  get_random_card.rs  mod.rs  profile_commands.rs  stats_commands.rs
hangman-plus/src-tauri/src/db/: card_attempts.rs  cards.rs  cards_test.rs  mod.rs
hangman-plus/src-tauri/src/domain/: card.rs  category.rs  dto.rs  mod.rs
hangman-plus/src-tauri/src/services/: auth_service.rs  card_service.rs  mod.rs  profile_service.rs
hangman-plus/src-tauri/src/utils/: security.rs
hangman-plus/src/components/: LoginModal.tsx  RegisterModal.tsx  Toast.tsx
hangman-plus/src/lib/: invoke.ts
hangman-plus/src/pages/: AddNewCardPage.tsx  CardRequestsPage.tsx  EditCardsPage.tsx  GamePage.tsx  HomePage.tsx  LandingPage.tsx  NextPage.tsx  StatsPage.tsx
hangman-plus/src/pages/css/: LandingPage.css
hangman-plus/src/styles/: AuthModal.css  HomePage.css  LandingPage.css  editcards.css  gamepage.css  statspage.css  theme.css
hangman-plus/src/types/: auth.ts
