[package]
name = "hangman-plus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hangman_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1"





# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared core crate
hangman-core = { path = "../../hangman-core" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Security / auth
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# Time utils
time = { version = "0.3", features = ["macros"] }
