[package]
name = "hangman-plus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared core crate
hangman-core = { path = "../../hangman-core" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Random + IDs
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Security / auth
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"

# Time utils
time = { version = "0.3", features = ["macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

